# binsalat

./: CMakeLists.txt  LICENSE.txt  README.md
test_builder_for_input_flow/: CMakeLists.txt  main.c  test_input_flow.c  test_input_flow.h
test_interpretation/: CMakeLists.txt  extern_code.cpp  extern_code.hpp  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp  test_data.cpp  test_data.hpp
test_sala_optimizer/: CMakeLists.txt  executable_path.hpp
test_sala_optimizer/analysis/: CMakeLists.txt  analysis_test_harness.hpp  analysis_test_registry.hpp  utils.hpp
test_sala_optimizer/analysis/available_copy_analysis/: CMakeLists.txt  available_copy_analysis_chain_test.cpp
test_sala_optimizer/analysis/available_copy_analysis/available_copy_golden/: branch_different_facts_die_at_join.available_copy_debug.expected  branch_different_facts_die_at_join.json  branch_same_fact_survives_join.available_copy_debug.expected  branch_same_fact_survives_join.json  constant_copy_not_a_fact.available_copy_debug.expected  dest_redefinition_kills_fact.available_copy_debug.expected  dest_redefinition_kills_fact.json  entry_in_empty_successor_gets_fact.json  loop_fixpoint_stable_copy.json  single_explicit_copy.available_copy_debug.expected  single_explicit_copy.json  source_redefinition_kills_fact.available_copy_debug.expected  source_redefinition_kills_fact.json  transitive_fact_preserved_by_middle_redefinition.available_copy_debug.expected  transitive_fact_preserved_by_middle_redefinition.json  transitive_universe_chain.json  unreachable_copy_still_in_universe.available_copy_debug.expected
test_sala_optimizer/analysis/available_copy_analysis/programs/: constant_copy_not_a_fact.json  entry_in_empty_successor_gets_fact.available_copy_debug.expected  loop_fixpoint_stable_copy.available_copy_debug.expected  static_parameter_local_copy_universe.available_copy_debug.expected  static_parameter_local_copy_universe.json  transitive_universe_chain.available_copy_debug.expected  unreachable_copy_still_in_universe.json
test_sala_optimizer/analysis/liveness_analysis/: CMakeLists.txt  liveness_analysis_chain_test.cpp
test_sala_optimizer/analysis/liveness_analysis/liveness_golden/: liveness_branch_condition_from_predecessor.json  liveness_branch_condition_from_predecessor.liveness_debug.expected  liveness_branch_join_both_paths_use_value.json  liveness_branch_one_path_uses_value.json  liveness_call_not_removable.json  liveness_call_result_dead_but_call_not_removable.liveness_debug.expected  liveness_call_two_arguments_live.json  liveness_dead_address_removable.liveness_debug.expected  liveness_dead_copy.liveness_debug.expected  liveness_dead_def_inside_loop.json  liveness_dead_def_inside_loop.liveness_debug.expected  liveness_dead_load_removable.json  liveness_first_of_three_redefinitions_dead.json  liveness_first_of_three_redefinitions_dead.liveness_debug.expected  liveness_load_result_dead_pointer_use_only.json  liveness_pointer_into_load_live.liveness_debug.expected  liveness_self_update_moveptr.json  liveness_self_update_moveptr.liveness_debug.expected  liveness_static_write_not_removable.liveness_debug.expected  liveness_static_write_one_branch_uses_value.liveness_debug.expected  liveness_store_not_removable.liveness_debug.expected  liveness_successor_use_makes_live_out.json  liveness_transitive_use_chain.json  liveness_used_address_not_removable.json  liveness_used_address_not_removable.liveness_debug.expected  liveness_used_copy.json  liveness_used_load_not_removable.liveness_debug.expected
test_sala_optimizer/analysis/liveness_analysis/programs/: liveness_branch_condition_live.json  liveness_branch_condition_live.liveness_debug.expected  liveness_branch_join_both_paths_use_value.liveness_debug.expected  liveness_branch_one_path_uses_value.liveness_debug.expected  liveness_call_argument_live.json  liveness_call_argument_live.liveness_debug.expected  liveness_call_not_removable.liveness_debug.expected  liveness_call_result_dead_but_call_not_removable.json  liveness_call_two_arguments_live.liveness_debug.expected  liveness_dead_address_removable.json  liveness_dead_copy.json  liveness_dead_defs_in_both_branches.json  liveness_dead_defs_in_both_branches.liveness_debug.expected  liveness_dead_load_removable.liveness_debug.expected  liveness_join_block_use_propagates_back.json  liveness_join_block_use_propagates_back.liveness_debug.expected  liveness_load_result_dead_pointer_use_only.liveness_debug.expected  liveness_loop_carried_value.json  liveness_loop_carried_value.liveness_debug.expected  liveness_pointer_into_load_live.json  liveness_static_write_not_removable.json  liveness_static_write_one_branch_uses_value.json  liveness_store_not_removable.json  liveness_successor_use_makes_live_out.liveness_debug.expected  liveness_transitive_use_chain.liveness_debug.expected  liveness_used_load_not_removable.json
test_sala_optimizer/analysis/points_to_analysis/: CMakeLists.txt  points_to_analysis_chain_test.cpp
test_sala_optimizer/analysis/points_to_analysis/points_to_golden/: address_basic.json  address_basic.points_to_debug.expected  alloca_basic.json  alloca_basic.points_to_debug.expected  branch_heap_pointee_initialized_vs_uninitialized_load.points_to_debug.expected  branch_heap_uninitialized_vs_initialized_load.points_to_debug.expected  branch_moveptr_heap_uninitialized_vs_initialized_load.json  branch_moveptr_heap_uninitialized_vs_initialized_load.points_to_debug.expected  branch_moveptr_pointer_uninitialized_vs_initialized_store.json  branch_moveptr_pointer_uninitialized_vs_initialized_store.points_to_debug.expected  branch_pointer_uninitialized_vs_initialized_store.points_to_debug.expected  copy_pointer.json  (+62 more)
test_sala_optimizer/programIR/: CMakeLists.txt  program_ir_test.cpp
test_sala_optimizer/translation/: CMakeLists.txt  translation_test.cpp
test_sala_optimizer/utils/: CMakeLists.txt  dynamic_bitset_test.cpp  sparse_map_test.cpp  sparse_set_test.cpp  type_list_compilation_test.cpp
test_sala_optimizer/utils/view/: flattened_cfg_view_test.cpp
(+66 files in other folders)
