set(THIS_TARGET_NAME test_interpretation)

file(GLOB "${THIS_TARGET_NAME}_HPP" "./*.hpp")
file(GLOB "${THIS_TARGET_NAME}_CPP" "./*.cpp")

add_executable(${THIS_TARGET_NAME}
    "${${THIS_TARGET_NAME}_HPP}"
    "${${THIS_TARGET_NAME}_CPP}"
    )

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
else()
    include_directories(${LLVM_INCLUDE_DIRS})
endif()

target_link_libraries(${THIS_TARGET_NAME}
    sala
    utility
    ${BOOST_LIST_OF_LIBRARIES_TO_LINK_WITH}
    )

# set_target_properties(${THIS_TARGET_NAME} PROPERTIES
#     DEBUG_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_Debug"
#     RELEASE_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_Release"
#     RELWITHDEBINFO_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_RelWithDebInfo"
#     )

if(DEFINED BINSALAT_INSTALL_DIR)
    install(TARGETS ${THIS_TARGET_NAME} DESTINATION "${BINSALAT_INSTALL_DIR}")
endif(DEFINED BINSALAT_INSTALL_DIR)

